// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogListContainer Snapshots when its not the first page matches snapshot 1`] = `
<div
  class="PageContent PageContent--wide PageContent--fullWidth"
>
  <!---->
   
  <div
    class="FlexContainer PageContent PageContent--wide"
  >
    <bloglist-stub
      color="gray"
      posts="[object Object],[object Object],[object Object]"
    />
     
    <div>
      <blogcategories-stub
        categories="[object Object],[object Object],[object Object],[object Object]"
        color="purple"
      />
    </div>
  </div>
   
  <div
    class="Blog-pageNumberList"
  >
    <div />
  </div>
</div>
`;

exports[`BlogListContainer Snapshots when its the first page matches snapshot 1`] = `
<div
  class="PageContent PageContent--wide PageContent--fullWidth"
>
  <!---->
   
  <div
    class="FlexContainer PageContent PageContent--wide"
  >
    <bloglist-stub
      color="gray"
      isfirstpage="true"
      posts="[object Object],[object Object],[object Object]"
    />
     
    <div>
      <blogcategories-stub
        categories="[object Object],[object Object],[object Object],[object Object]"
        color="purple"
      />
    </div>
  </div>
   
  <div
    class="Blog-pageNumberList"
  >
    <div />
  </div>
</div>
`;

exports[`BlogListContainer Snapshots with a color passed in matches snapshot 1`] = `
<div
  class="PageContent PageContent--wide PageContent--fullWidth"
>
  <!---->
   
  <div
    class="FlexContainer PageContent PageContent--wide"
  >
    <bloglist-stub
      color="gray"
      isfirstpage="true"
      posts="[object Object],[object Object],[object Object]"
    />
     
    <div>
      <blogcategories-stub
        categories="[object Object],[object Object],[object Object],[object Object]"
        color="purple"
      />
    </div>
  </div>
   
  <div
    class="Blog-pageNumberList"
  >
    <div />
  </div>
</div>
`;

exports[`BlogListContainer Snapshots without a color passed in matches snapshot 1`] = `
<div
  class="PageContent PageContent--wide PageContent--fullWidth"
>
  <!---->
   
  <div
    class="FlexContainer PageContent PageContent--wide"
  >
    <bloglist-stub
      isfirstpage="true"
      posts="[object Object],[object Object],[object Object]"
    />
     
    <div>
      <blogcategories-stub
        categories="[object Object],[object Object],[object Object],[object Object]"
        color="purple"
      />
    </div>
  </div>
   
  <div
    class="Blog-pageNumberList"
  >
    <div />
  </div>
</div>
`;
